tests/error/modifier_errors/power_arg_type.err
Error: Type mismatch (at $FILE:7:15)
  | 
5 | @guppy
6 | def test() -> None:
7 |     with power(True):
  |                ^^^^ Expected expression of numeric type, got `bool`

Guppy compilation failed due to 1 previous error
